# paper-tool

./: .gitignore  README.md  config.example.yaml  main.py  pyproject.toml
src/paper_tool/: __init__.py  __main__.py  main.py
src/paper_tool/config/: loader.py  schema.py
src/paper_tool/core/: models.py  pipeline.py  queue.py
src/paper_tool/db/: database.py  operations.py  rollback.py
src/paper_tool/extractor/: base.py  text.py
src/paper_tool/llm/: classifier.py  factory.py  schemas.py
src/paper_tool/monitor/: watcher.py
src/paper_tool/renamer/: mover.py  template.py
src/paper_tool/ui/: gui.py  tray.py
src/paper_tool/utils/: asyncio_thread.py  logging.py  retry.py  sanitize.py
tests/: conftest.py  test_classifier.py  test_extractor.py  test_pipeline.py  test_renamer.py
